minor bug fix removed overflow: hidden to make text area scrollable

--- a/src/app/task-modal/task-modal.component.css
+++ b/src/app/task-modal/task-modal.component.css
@@ -10,7 +10,7 @@
 
 textarea {
     resize: none;
-    overflow: hidden;
+    /* overflow: hidden; */
     min-height: 50px;
     max-height: 100px;
 
